<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="#CCCCCC" >

            <!-- title -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/firstband"
                android:textSize="16dp" />

            <!-- divider -->

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="#DADADC" >
            </View>

            <View
                android:layout_width="1dp"
                android:layout_height="47dp"
                android:layout_alignParentRight="true"
                android:background="#DADADC" >
            </View>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="#CCCCCC" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/secondband"
                android:textSize="16dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="#DADADC" >
            </View>

            <View
                android:layout_width="1dp"
                android:layout_height="47dp"
                android:layout_alignParentRight="true"
                android:background="#DADADC" >
            </View>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="#CCCCCC" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/thirdband"
                android:textSize="16dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="#DADADC" >
            </View>

            <View
                android:layout_width="1dp"
                android:layout_height="47dp"
                android:layout_alignParentRight="true"
                android:background="#DADADC" >
            </View>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="#CCCCCC" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/fourthband"
                android:textSize="16dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="#DADADC" >
            </View>

            <View
                android:layout_width="1dp"
                android:layout_height="47dp"
                android:layout_alignParentRight="true"
                android:background="#DADADC" >
            </View>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="horizontal" >

        <ListView
            android:id="@+id/FourListView1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:descendantFocusability="beforeDescendants" />

        <ListView
            android:id="@+id/FourListView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:descendantFocusability="beforeDescendants" />

        <ListView
            android:id="@+id/FourListView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:descendantFocusability="beforeDescendants" />

        <ListView
            android:id="@+id/FourListView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:descendantFocusability="beforeDescendants" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#F3F3F3" >

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentTop="true"
            android:background="#DADADC" >
        </View>

        <TextView
            android:id="@+id/FourResultView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="This is the 4 band textView!" />
    </RelativeLayout>

</LinearLayout>